# old_musamusa2

./: README.md  ROADMAP.md  codesearch_in_codedirectory.sh  err_codes.sh  logging.ini  mainconfig.ini  pimydoc  project.md  propagate_versionnumber.py  pyproject.toml
doc/: 1.mus  Orphée.mus  code.md  format.py  grec.mus  latin.mus  musamusatextformatfile.md  poetry.md  project.md
musamusa/: aboutproject.py  cfgini.py  cmdline_checkenv.py  cmdlineargs.py  cmdlineorders.py  global_logger.py  global_maincfgini.py  logging_facilities.py  main.py  maincfgfile.py  utils.py
