[tool.poetry]
name = "musamusa"
version = "0.0.1-dev3"
description = "Tool to display annotated texts."
authors = ["suizokukan <suizokukan@orange.fr>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^9.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
